--- a/config/scenario/philosopher.yaml
+++ b/config/scenario/philosopher.yaml
@@ -38,7 +38,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
@@ -58,7 +58,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
@@ -116,7 +116,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: self_rag
       weight: 0.5
@@ -155,7 +155,7 @@ steps:
     config:
       max_tokens: 4096
       is_thought: true
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.25
