--- a/config/scenario/researcher_dialogue.yaml
+++ b/config/scenario/researcher_dialogue.yaml
@@ -50,7 +50,7 @@ steps:
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: research
     output:
       document_type: dialogue-librarian
@@ -101,7 +101,7 @@ steps:
       Begin with "[== {{ coder.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: analysis
     output:
       document_type: dialogue-coder
@@ -152,7 +152,7 @@ steps:
       Begin with "[== {{ transcendent.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: research
     output:
       document_type: dialogue-transcendent
@@ -202,7 +202,7 @@ steps:
       Begin with "[== {{ artist.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: analysis
     output:
       document_type: dialogue-artist
@@ -250,7 +250,7 @@ steps:
       Begin with "[== {{ coder.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: analysis
     output:
       document_type: dialogue-coder
@@ -299,7 +299,7 @@ steps:
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: research
     output:
       document_type: dialogue-librarian
@@ -349,7 +349,7 @@ steps:
       Begin with "[== {{ writer.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: writing
     output:
       document_type: dialogue-writer
@@ -401,7 +401,7 @@ steps:
     config:
       max_tokens: 4096
       is_codex: true
-      use_guidance: true
+      link_guidance: true
       model_role: codex
     output:
       document_type: codex
@@ -449,13 +449,16 @@ steps:
       Begin with "[== {{ librarian.name }}'s Emotional State: <list of +Emotions+> ==]"
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       model_role: research
     output:
       document_type: dialogue-librarian
       weight: 0.2
     context:
       - action: flush
+      - action: load_conversation
+        target: current
+        document_types: [summary, conversation, mud-world, mud-agent]
       - action: search_memories
         top_n: 20
     next: [brainstorm_response]
