--- a/config/scenario/test_simple.yaml
+++ b/config/scenario/test_simple.yaml
@@ -23,7 +23,7 @@ steps:
       {% endif %}
     config:
       max_tokens: 512
-      use_guidance: false
+      link_guidance: false
     output:
       document_type: test
       weight: 1.0
