--- a/config/scenario/analyst.yaml
+++ b/config/scenario/analyst.yaml
@@ -33,7 +33,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: ner
@@ -50,7 +50,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.25
@@ -66,7 +66,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
@@ -101,7 +101,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -117,7 +117,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
