--- a/config/scenario/critique.yaml
+++ b/config/scenario/critique.yaml
@@ -42,7 +42,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -61,7 +61,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -80,7 +80,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -99,7 +99,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -118,7 +118,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -137,7 +137,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.5
@@ -156,7 +156,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.7
