--- a/config/scenario/journaler.yaml
+++ b/config/scenario/journaler.yaml
@@ -36,7 +36,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
@@ -56,7 +56,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: ner
@@ -77,7 +77,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: step
       weight: 0.4
@@ -99,7 +99,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
     output:
       document_type: reflection
       weight: 0.4
@@ -119,7 +119,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
@@ -140,7 +140,7 @@ steps:
       '
     config:
       max_tokens: 4096
-      use_guidance: true
+      link_guidance: true
       is_thought: true
     output:
       document_type: step
