--- a/packages/aim-core/pyproject.toml
+++ b/packages/aim-core/pyproject.toml
@@ -48,7 +48,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/aim", "src/aim_legacy"]
+packages = ["src/aim", "src/aim_code", "src/aim_legacy"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
