--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,11 +41,14 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/aim_cli", "src/aim_bot", "src/aim_server", "src/dreamer", "src/dream_agent", "src/dream_watcher"]
+packages = ["src/aim_cli", "src/aim_bot", "src/aim_server", "src/dreamer", "src/dream_agent", "src/dream_watcher", "src/repo_watcher"]
 
 [tool.pytest.ini_options]
 testpaths = [
     "tests",
+]
+pythonpath = [
+    "src",
 ]
 filterwarnings = [
     "ignore:open_text is deprecated.*:DeprecationWarning:wonderwords\\.random_word",
