--- a/config/tools/auras/web_access.yaml
+++ b/config/tools/auras/web_access.yaml
@@ -26,6 +26,9 @@ functions:
         selector:
           type: string
           description: Optional CSS selector to target specific content
+        output_format:
+          type: string
+          description: Optional output format (e.g., "markdown")
       required: [url]
     examples:
       - {web_scrape: {url: "https://example.com"}}
@@ -52,6 +55,9 @@ functions:
         url:
           type: string
           description: The URL to visit
+        output_format:
+          type: string
+          description: Optional output format (e.g., "markdown")
       required: [url]
     examples:
       - {visit_webpage: {url: "https://example.com"}}
